Add Identity default pages to app

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=medicine_user;user=root;password=porsche0601"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
