Config code-first entities to support application tables + identity tables

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=medicine_user;user=root;password=porsche0601"
+    "DefaultConnection": "server=localhost;database=medicine_store;user=root;password=porsche0601"
   },
   "Logging": {
     "LogLevel": {
