Manager page + AddThuoc Page
to do:
_ fix find by hoat chat
_ add soluong + dongia

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=medicine_store;user=root;password=porsche0601"
+    "DefaultConnection": "server=localhost;database=medicine_store;user=root;password=porsche0601",
+    "ThuocDb": "server=localhost;database=medicine;user=root;password=porsche0601"
   },
   "Logging": {
     "LogLevel": {
