--- a/Medicine_Store.csproj
+++ b/Medicine_Store.csproj
@@ -21,9 +21,9 @@
     <PackageReference Include="MySql.Data" Version="8.3.0" />
     <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="PagedList" Version="1.17.0" />
     <PackageReference Include="Stripe.net" Version="44.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="X.PagedList" Version="9.1.2" />
   </ItemGroup>
 
 </Project>
